bpo-44720: Don't crash when calling weakref.proxy(not_an_iterator).__next__ (GH-27316)